--- a/info/common-ovz.html
+++ b/info/common-ovz.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Сведения об образовательной организации</title><script src="./js/jquery.min.js"></script><script src="./js/bootstrap.min.js"></script><link href="./css/style.css" rel="stylesheet"><link href="./css/bootstrap.min.css" rel="stylesheet"><link href="./css/sveden-base.css" rel="stylesheet"><link href="./css/sveden-special.css" rel="stylesheet"><link href="./css/sveden-style.css" rel="stylesheet"></head><body>
         <div id="wrapper" style="display: block;">
-            
+
             <div class="container-fluid">
                 <div class="header" id="header">
-                    <h1 id="organization_name">Чебоксарский институт (филиал) федерального государственного бюджетного образовательного учреждения высшего образования «Московский политехнический университет»</h1>
+                    <h1 id="organization_name">*organization_name*</h1>
                     <div class="navbar navbar-default navbar-static-top">
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav"><li class="">
@@ -45,39 +45,32 @@
                         <div id="page_content">
                             <div>
                                 <p class="col-md-4 col-sm-6">Дата создания образовательной организации:</p>
-                                <p class="col-md-8 col-sm-6" id="reg_date" itemprop="regDate">1 ноября 1955 года</p>
+                                <p class="col-md-8 col-sm-6" id="reg_date" itemprop="regDate">*obr_dat*</p>
                                 <div class="clear"></div>
                             </div>
                             <div>
                                 <p class="col-md-4 col-sm-6">Адрес:</p>
-                                <p class="col-md-8 col-sm-6" id="address" itemprop="address">428000, Чувашская Республика, г. Чебоксары, ул. К. Маркса, 54 (Главный корпус)</p>
+                                <p class="col-md-8 col-sm-6" id="address" itemprop="address">*obr_adr*</p>
                                 <div class="clear"></div>
                             </div>
                             <div>
                                 <p class="col-md-4 col-sm-6">График работы образовательной организации:</p>
-                                <p class="col-md-8 col-sm-6" id="work_time" itemprop="workTime">Деканаты и отделы:
-Начало-окончание работы:08.00–16.30; перерыв на обед −12.00–12.30 (1 смена)
-Начало-окончание работы:10.00–18.30; перерыв на обед −14.00–14.30 (2 смена)
-Инспектора по контролю за исполнением поручений и заведующие лабораториями:
-Начало-окончание работы: 08.00–16.30; перерыв на обед −11.50–12.20 (1 смена)
-Начало-окончание работы:12.30–21.00; перерыв на обед −15.50–16.20 (2 смена)
-Окончание работы в предпраздничные дни сокращается на один час.
-Суббота, воскресенье-выходные дни.</p>
+                                <p class="col-md-8 col-sm-6" id="work_time" itemprop="workTime">*obr_time*</p>
                                 <div class="clear"></div>
                             </div>
                             <div>
                                 <p class="col-md-4 col-sm-6">Контактные телефоны:</p>
-                                <p class="col-md-8 col-sm-6" id="telephone" itemprop="telephone">+7 (8352) 62-63-22</p>
+                                <p class="col-md-8 col-sm-6" id="telephone" itemprop="telephone">*obr_phones*</p>
                                 <div class="clear"></div>
                             </div>
                             <div>
                                 <p class="col-md-4 col-sm-6">Факс:</p>
-                                <p class="col-md-8 col-sm-6" id="fax" itemprop="fax">+7 (8352) 62-63-22</p>
+                                <p class="col-md-8 col-sm-6" id="fax" itemprop="fax">*obr_fax*</p>
                                 <div class="clear"></div>
                             </div>
                             <div>
                                 <p class="col-md-4 col-sm-6">Адреса электронной почты:</p>
-                                <p class="col-md-8 col-sm-6" id="email" itemprop="email">rektorat@polytech21.ru</p>
+                                <p class="col-md-8 col-sm-6" id="email" itemprop="email">*obr_email*</p>
                                 <div class="clear"></div>
                             </div>
                             <div>
@@ -88,7 +81,7 @@
                                         <th style="width: 15%;">Контактные телефоны</th>
                                         <th style="width: 15%;">Адрес электронной почты</th>
                                         <th style="width: 15%;">Адрес сайта учредителя(ей) в сети «Интернет»</th>
-                                    </tr><tr itemprop="uchredLaw"><td itemprop="nameUchred">Министерство науки и высшего образования Российской Федерации</td><td itemprop="fullnameUchred">Котюков Михаил Михайлович</td><td itemprop="addressUchred">Россия, 125993, Москва улица Тверская, дом 11</td><td itemprop="telUchred">+7 (495) 539 55 19</td><td itemprop="mailUchred">info@mon.gov.ru</td><td itemprop="websiteUchred">http://минобрнауки.рф</td></tr></table></div>
+                                    </tr><tr itemprop="uchredLaw"><td itemprop="nameUchred">Министерство науки и высшего образования Российской Федерации</td><td itemprop="fullnameUchred">*founders_1_name_uchred*</td><td itemprop="addressUchred">*founders_1_address_uchred*</td><td itemprop="telUchred">*founders_1_tel_uchred*</td><td itemprop="mailUchred">*founders_1_mail_uchred*</td><td itemprop="websiteUchred">*founders_1_website_uchred*</td></tr></table></div>
                             <div>
                                 <h4>Филиалы</h4>
                                 <table class="table table-bordered" id="branch"><tr><th style="width: 35%;">Наименование филиала</th>
