--- a/info/common-ovz.html
+++ b/info/common-ovz.html
@@ -28,8 +28,8 @@
                                         <li><a href="budget-ovz.html">Финансово-хозяйственная деятельность</a></li>
                                         <li><a href="vacant-ovz.html">Вакантные места для приема (перевода)</a></li>
                                     </ul></li>
-                            </ul><ul class="nav navbar-nav navbar-right"><li itemprop="Copy">
-                                    <a href="common.html" class="accessability">
+                            </ul><ul class="nav navbar-nav navbar-right"><li itemprop="copy">
+                                    <a href="index.php" class="accessability" itemprop='copy'>
                                         Обычная версия
                                     </a>
                                 </li>
