--- a/info/common.html
+++ b/info/common.html
@@ -29,7 +29,7 @@
                                         <li><a href="vacant.html">Вакантные места для приема (перевода)</a></li>
                                     </ul></li>
                             </ul><ul class="nav navbar-nav navbar-right"><li itemprop="сopy">
-                                    <a href="common-ovz.html" class="accessability">
+                                    <a href="common-ovz.php" class="accessability" itemprop='copy'>
                                         Версия официального сайта для слабовидящих
                                     </a>
                                 </li>
