add script for ovz

--- a/info/common.html
+++ b/info/common.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Сведения об образовательной организации</title><script src="./js/jquery.min.js"></script><script src="./js/bootstrap.min.js"></script><link href="./css/style.css" rel="stylesheet"><link href="./css/bootstrap.min.css" rel="stylesheet"><link href="./css/sveden-base.css" rel="stylesheet"><link href="./css/sveden-style.css" rel="stylesheet"></head><body>
-        <div id="wrapper" style="display: block;">
+<html lang="ru">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Сведения об образовательной организации</title>
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
+  <script src="./js/responsivevoice.min.js"></script>
+  <script src="./js/js.cookie.js"></script>
+  <script src="./js/bvi.min.js"></script>
+  <script src="./js/bvi-init.js"></script>
+  <link href="./css/style.css" rel="stylesheet">
+  <link href="./css/bootstrap.min.css" rel="stylesheet">
+  <link href="./css/sveden-base.css" rel="stylesheet">
+  <link href="./css/sveden-style.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/bvi.min.css">
+  <link rel="stylesheet" href="./css/bvi-font.min.css">
+</head><body>
+        <div id="wrapper" class="bvi-show" style="display: block;">
 
             <div class="container">
                 <div class="header" id="header">
@@ -29,8 +47,8 @@
                                         <li><a href="vacant.html">Вакантные места для приема (перевода)</a></li>
                                     </ul></li>
                             </ul><ul class="nav navbar-nav navbar-right"><li itemprop="сopy">
-                                    <a href="common-ovz.php" class="accessability" itemprop='copy'>
-                                        Версия официального сайта для слабовидящих
+                                    <a href="#" class="bvi-open" title="Версия сайта для слабовидящих" itemprop='copy'>
+                                      <i class="bvi-icon bvi-eye bvi-x"></i>  Версия официального сайта для слабовидящих
                                     </a>
                                 </li>
                             </ul></div>
@@ -106,4 +124,9 @@
             </div>
 
         </div>
+        <script type='text/javascript'>
+/* <![CDATA[ */
+var bvi_init = {"bvi_init_setting":{"bvi_theme":"white","bvi_font":"arial","bvi_font_size":16,"bvi_letter_spacing":"normal","bvi_line_height":"normal","bvi_images":true,"bvi_reload":false,"bvi_fixed":true,"bvi_voice":true,"bvi_flash_iframe":true,"bvi_hide":false}};
+/* ]]> */
+</script>
     </body></html>
