--- a/info/common-ovz.html
+++ b/info/common-ovz.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Сведения об образовательной организации</title><script src="./js/jquery.min.js"></script><script src="./js/bootstrap.min.js"></script><link href="./css/style.css" rel="stylesheet"><link href="./css/bootstrap.min.css" rel="stylesheet"><link href="./css/sveden-base.css" rel="stylesheet"><link href="./css/sveden-special.css" rel="stylesheet"><link href="./css/sveden-style.css" rel="stylesheet"></head><body>
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Сведения об образовательной организации</title>
+  <script src="./js/jquery.min.js"></script><script src="./js/bootstrap.min.js"></script>
+  <link href="./css/style.css" rel="stylesheet">
+  <link href="./css/bootstrap.min.css" rel="stylesheet">
+  <link href="./css/sveden-base.css" rel="stylesheet">
+  <link href="./css/sveden-special.css" rel="stylesheet">
+  <link href="./css/sveden-style.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/bvi.min.css" type="text/css">
+  <link rel="stylesheet" href="./css/bvi-font.min.css" type="text/css">
+</head><body>
         <div id="wrapper" style="display: block;">
 
             <div class="container-fluid">
@@ -16,6 +30,7 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                         Сведения об образовательной организации <span class="caret"></span>
                                     </a>
+                                    <a href="#" class="bvi-open" title="Версия сайта для слабовидящих"><i class="bvi-icon bvi-eye bvi-2x"></i> Версия сайта для слабовидящих</a>
                                     <ul class="dropdown-menu"><li><a href="common-ovz.html">Основные сведения</a></li>
                                         <li><a href="struct-ovz.html">Структура и органы управления образовательной организацией</a></li>
                                         <li><a href="document-ovz.html">Документы</a></li>
@@ -94,4 +109,8 @@
             </div>
 
         </div>
+        <script src="./js/responsivevoice.min.js"></script>
+      <script src="./js/js.cookie.js"></script>
+      <script src="./js/bvi-init.js"></script>
+      <script src="./js/bvi.min.js"></script>
     </body></html>
