--- a/info/common.html
+++ b/info/common.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="./css/bvi.min.css">
   <link rel="stylesheet" href="./css/bvi-font.min.css">
 </head><body>
-        <div id="wrapper" class="bvi-show" style="display: block;">
+        <div id="wrapper" class="bvi-show bvi-voice" style="display: block;">
 
             <div class="container">
                 <div class="header" id="header">
