--- a/test/index.html
+++ b/test/index.html
@@ -24,7 +24,7 @@
                 <div class='header' id='header'>
                     <h1 id='organization_name'>Чебоксарский институт (филиал) федерального государственного бюджетного  образовательного учреждения высшего образования «Московский политехнический университет»</h1>
                     <div class='navbar navbar-default navbar-static-top'>
-                        <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
+                        <div class='navbar' id='bs-example-navbar-collapse-1'>
                             <ul class='nav navbar-nav'><li class=''>
                                     <a href='/' class='bvi-voice'>
                                         Главная <span class='sr-only'>(current)</span>
@@ -73,7 +73,7 @@
                             </div>
                             <div>
                                 <p class='col-md-4 col-sm-6 bvi-voice'>График работы образовательной организации:</p>
-                                <p class='col-md-8 col-sm-6 bvi-voice' id='work_time' itemprop='workTime'>- при пятидневной рабочей неделе: 
+                                <p class='col-md-8 col-sm-6 bvi-voice' id='work_time' itemprop='workTime'>- при пятидневной рабочей неделе:
 
 Документовед, инспектор по контролю за исполнением поручений
 
