--- a/info/common.html
+++ b/info/common.html
@@ -24,7 +24,7 @@
                 <div class="header" id="header">
                     <h1 id="organization_name">*organization_name*</h1>
                     <div class="navbar navbar-default navbar-static-top">
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <div class="navbar" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav"><li class="">
                                     <a href="/" class="bvi-voice">
                                         Главная <span class="sr-only">(current)</span>
