--- a/info/common.html
+++ b/info/common.html
@@ -20,7 +20,7 @@
 </head><body>
         <div id="wrapper" class="bvi-show" style="display: block;">
 
-            <div class="container">
+            <div class="container" style="width: 95%;">
                 <div class="header" id="header">
                     <h1 id="organization_name">*organization_name*</h1>
                     <div class="navbar navbar-default navbar-static-top">
