--- a/test/index.html
+++ b/test/index.html
@@ -20,7 +20,7 @@
 </head><body>
         <div id='wrapper' class='bvi-show' style='display: block;'>
 
-            <div class='container'>
+            <div class='container' style="width: 95%;">
                 <div class='header' id='header'>
                     <h1 id='organization_name'>Чебоксарский институт (филиал) федерального государственного бюджетного  образовательного учреждения высшего образования «Московский политехнический университет»</h1>
                     <div class='navbar navbar-default navbar-static-top'>
