--- a/public/index.html
+++ b/public/index.html
@@ -351,7 +351,7 @@
                         </button>
                       </div>
                       <hr>
-                      <h4><strong>Студенческие органы управления, объединения, организации</strong></h4>
+                      <h4><strong>Общественные организации</strong></h4>
                       <table class="table table-responsive" id="departments">
                         <tbody>
                           <tr>
